feat: Create hardware mining instance
